.kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-v2
  labels:
    app: map-v2
spec:
  selector:
    matchLabels:
      app: map-v2
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: map-v2
    spec:
      containers:
        - name: map-v2
          image: 'ghcr.io/simrail/map-v2:setup-docker'
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: github
---
apiVersion: v1
kind: Service
metadata:
  name: map-v2
spec:
  selector:
    app: map-v2
  ports:
    - name: web
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: map-v2
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "False"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - map.simrail.app
      secretName: map-simrail-app-tls
    - hosts:
        - simrail.app
        - www.simrail.app
      secretName: simrail-app-tls
  rules:
    - host: map.simrail.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: map-v2
                port:
                  name: web
    - host: www.simrail.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: map-v2
                port:
                  name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: map-v2-api-profile
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/ssl-redirect: "False"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid any 60m;
      add_header X-Cache-Status $upstream_cache_status;

spec:
  ingressClassName: "nginx"
  rules:
    - host: map.simrail.app
      http:
        paths:
          - path: /api/profile
            pathType: Prefix
            backend:
              service:
                name: map-v2
                port:
                  name: web
